src/features/roller/Intent.module.less
@import (reference) "common.less";

.form {
  margin: 0 auto;
  max-width: @screen-md;
  .torii-box();
  padding-bottom: 0;

  @media (min-width: @screen-lg) {
    @extra-space: 32;

    max-width: @screen-md + 2 * @extra-space;
    padding-left: 24px + @extra-space;
    padding-right: 24px + @extra-space;
  }

  fieldset {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;

    & > * {
      margin-left: 12px;
      margin-right: 12px;
    }

    :global(.ant-select-auto-complete) {
      min-width: 240px;
    }
  }

  fieldset + :global(.ant-divider),
  :global(.ant-collapse) + :global(.ant-divider) {
    margin-top: 0;
  }

  :global(.ant-collapse-content) fieldset:last-of-type {
    margin-bottom: -24px;
  }

  .checkboxes {
    :global(.ant-form-item-control-input-content) {
      display: flex;
      justify-content: center;
    }
  }

  .channel,
  .addkept {
    button {
      display: block;
      margin: 0 auto;
    }
  }

  .assist-container {
    padding-bottom: 12px;

    :global(.ant-form-item-control-input-content) {
      display: flex;
      justify-content: center;
    }
  }

  .channeled-summary,
  .addkept-summary {
    text-align: center;
    img {
      height: 48px;
      margin-left: 8px;
    }
  }

  :global(.ant-form-item-has-error)
    + :global(.ant-collapse)
    > :global(.ant-collapse-item.ant-collapse-no-arrow)
    > :global(.ant-collapse-header) {
    margin-top: 0;
  }

  .school {
    margin-bottom: 24px;

    @media (max-width: @screen-sm) {
      margin-left: -36px;
      margin-right: -36px;
    }
  }

  .custom-school {
    .paper-background();
    padding: 24px;
    padding-bottom: 12;
    margin-bottom: 24px;
  }

  .help-message {
    color: #722ed1;
    margin-bottom: 32px;
  }
}

.plus :global(.ant-form-item-control-input-content):after {
  color: @text-color-secondary;
  margin-left: 12px;
}

// Okay, _maybe_ there is a better way to do that
.plus-01 :global(.ant-form-item-control-input-content):after {
  content: "+1";
}
.plus-02 :global(.ant-form-item-control-input-content):after {
  content: "+2";
}
.plus-03 :global(.ant-form-item-control-input-content):after {
  content: "+3";
}
.plus-04 :global(.ant-form-item-control-input-content):after {
  content: "+4";
}
.plus-05 :global(.ant-form-item-control-input-content):after {
  content: "+5";
}
.plus-06 :global(.ant-form-item-control-input-content):after {
  content: "+6";
}
.plus-07 :global(.ant-form-item-control-input-content):after {
  content: "+7";
}
.plus-08 :global(.ant-form-item-control-input-content):after {
  content: "+8";
}
.plus-09 :global(.ant-form-item-control-input-content):after {
  content: "+9";
}
.plus-10 :global(.ant-form-item-control-input-content):after {
  content: "+10";
}
.plus-11 :global(.ant-form-item-control-input-content):after {
  content: "+11";
}
.plus-12 :global(.ant-form-item-control-input-content):after {
  content: "+12";
}

